tests/invalid_programs/variable2.jas
// Expect colon.

let x = 5;
